--- a/Tubes/nbproject/private/private.properties
+++ b/Tubes/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\SagabAdi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Serlii R. Crusita\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
